
```puml
@startuml
title UML - Système de location de véhicules

class Vehicle {
  +id
  +marque
  +modele
  +categorie
  +tarif
  +etat
  +__str__()
}

class Car
class Truck
class Motorcycle

Vehicle <|-- Car
Vehicle <|-- Truck
Vehicle <|-- Motorcycle

class Customer {
  +id_client
  +nom
  +prenom
  +age
  +permis
  +historique_locations
  +__str__()
  +verifier_age(age_minimum)
  +ajouter_location_historique(location)
}

class Rental {
  +client
  +vehicule
  +date_debut
  +date_fin
  +penalite
  +cout_total
  +statut
  +est_valide()
  +calculer_cout_total()
  +ajouter_penalite(montant)
  +terminer_location()
  +__str__()
}

' Relations principales
Customer "1" --> "0..*" Rental : historique_locations
Rental "1" --> "1" Customer : client
Rental "1" --> "1" Vehicle : vehicule

@enduml
